--- a/src/pages/Career/Career.scss
+++ b/src/pages/Career/Career.scss
@@ -146,8 +146,8 @@
             font-size: calc(0.5 * var(--title_size));
             font-weight: bold;
             text-indent: 0px;
-            width: 100%;
-            text-align: center;
+            width: 83%;
+            text-align: start;
           }
         }
       }
